Ticket: #FT-147 SubTicket: # Component: Changes: 1.Fixed Bug - hover on navigation item not correct on firefox and edge

--- a/TripfinderWeb/TripfinderWeb/Global/Css/navigation-menu.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/navigation-menu.less
@@ -1166,7 +1166,7 @@
 		left: 0;
 
 		.navigation-content {
-			height: calc(~"100% - 98px");
+			height: calc(~"100% - 102px");
 			background-color: #000000;
 			opacity: 0.8;
 		}
